update config description

--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,9 @@ permalink: /:title/
 title: nathun smitty dot com
 tagline: the playground of Nathan Smith
 email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Nathan Smith lives here
 baseurl: / 
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://nathunsmitty.com"
 twitter_username: jekyllrb
 github_username:  jekyll
 
