Lots of fun stuff!

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@
 title:               Nathan Smith in HTML
 url:                 http://nathansmith.io
 
+permalink: /:title
+
 # Assets
 #
 # We specify the directory for Jekyll so we can use @imports.
