--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
   "name": "nathansmith.io",
-  "description": "nathan smith in html.",
-  "version": "1.0.0",
+  "description": "Nathan Smith in HTML",
   "author": "Nathan Smith <nathan@nathansmith.io>",
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
+  "version": "1.0.0",
   "scripts": {
-    "start": "gatsby develop --port 1234",
-    "build": "gatsby build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gatsby develop -p 1234",
+    "build": "gatsby build"
   },
   "dependencies": {
     "emotion": "^9.2.5",
     "emotion-server": "^9.2.5",
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-emotion": "^1.1.17",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-typescript": "^1.4.20",
-    "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-remark": "^1.7.44",
+    "gatsby": "^2.0.0-beta.36",
+    "gatsby-image": "^1.0.54",
+    "gatsby-plugin-emotion": "^2.0.0-beta.2",
+    "gatsby-plugin-sharp": "^2.0.0-beta.5",
+    "gatsby-plugin-typescript": "^2.0.0-beta.5",
+    "gatsby-source-filesystem": "^2.0.1-beta.5",
+    "gatsby-transformer-remark": "^2.1.1-beta.3",
+    "gatsby-transformer-sharp": "^2.1.1-beta.3",
     "polished": "^1.9.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-emotion": "^9.2.5",
-    "react-helmet": "^5.2.0",
     "rehype-react": "^3.0.2",
     "typescript": "^2.9.2"
-  },
-  "devDependencies": {
-    "prettier": "^1.12.0"
   }
 }
