--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "version": "1.0.0",
   "scripts": {
     "start": "gatsby develop -p 1234",
-    "build": "gatsby build"
+    "build": "gatsby build",
+    "serve": "gatsby serve"
   },
   "dependencies": {
     "emotion": "^9.2.5",
     "emotion-server": "^9.2.5",
-    "gatsby": "^2.0.0-beta.36",
-    "gatsby-image": "^1.0.54",
-    "gatsby-plugin-emotion": "^2.0.0-beta.2",
-    "gatsby-plugin-sharp": "^2.0.0-beta.5",
-    "gatsby-plugin-typescript": "^2.0.0-beta.5",
-    "gatsby-source-filesystem": "^2.0.1-beta.5",
-    "gatsby-transformer-remark": "^2.1.1-beta.3",
-    "gatsby-transformer-sharp": "^2.1.1-beta.3",
+    "gatsby": "next",
+    "gatsby-image": "next",
+    "gatsby-plugin-emotion": "next",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-typescript": "next",
+    "gatsby-source-filesystem": "next",
+    "gatsby-transformer-remark": "next",
+    "gatsby-transformer-sharp": "next",
     "polished": "^1.9.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
