--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@types/react-modal": "^3.2.0",
     "emotion": "^9.2.5",
     "emotion-server": "^9.2.5",
     "gatsby": "next",
@@ -23,6 +24,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.5",
+    "react-modal": "^3.5.1",
     "rehype-react": "^3.0.2",
     "typescript": "^2.9.2"
   }
