--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "next",
     "gatsby-image": "next",
     "gatsby-plugin-emotion": "next",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-typescript": "next",
