--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gatsby": "next",
     "gatsby-image": "next",
     "gatsby-plugin-emotion": "next",
+    "gatsby-plugin-google-analytics": "^1.0.31",
+    "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-typescript": "next",
     "gatsby-source-filesystem": "next",
@@ -23,6 +25,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.5",
+    "react-helmet": "^5.2.0",
     "rehype-react": "^3.0.2",
     "typescript": "^2.9.2"
   }
