--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "gatsby": "next",
     "gatsby-image": "next",
     "gatsby-plugin-emotion": "next",
-    "gatsby-plugin-google-analytics": "^1.0.31",
-    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-google-analytics": "next",
+    "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-typescript": "next",
     "gatsby-source-filesystem": "next",
