--- a/package.json
+++ b/package.json
@@ -8,6 +8,22 @@
     "build": "gatsby build",
     "serve": "gatsby serve"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,md,json,js}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
   "dependencies": {
     "emotion": "9.2.5",
     "emotion-server": "9.2.5",
@@ -28,5 +44,10 @@
     "react-helmet": "5.2.0",
     "rehype-react": "3.0.2",
     "typescript": "2.9.2"
+  },
+  "devDependencies": {
+    "husky": "^1.0.0-rc.13",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.14.0"
   }
 }
