--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "trailingComma": "es5"
   },
   "dependencies": {
-    "@types/react-modal": "3.2.0",
     "@fortawesome/fontawesome-svg-core": "1.2.2",
+    "@fortawesome/free-brands-svg-icons": "^5.2.0",
     "@fortawesome/free-solid-svg-icons": "5.2.0",
     "@fortawesome/react-fontawesome": "0.1.1",
+    "@types/react-modal": "3.2.0",
     "emotion": "9.2.6",
     "emotion-server": "9.2.6",
     "gatsby": "next",
