--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.2",
+    "@fortawesome/free-brands-svg-icons": "5.2.0",
     "@fortawesome/free-solid-svg-icons": "5.2.0",
     "@fortawesome/react-fontawesome": "0.1.1",
     "@types/react-helmet": "5.0.7",
@@ -40,7 +41,7 @@
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-typescript": "next",
-    "gatsby-plugin-typography": "2.2.0-beta.3",
+    "gatsby-plugin-typography": "next",
     "gatsby-source-filesystem": "next",
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
@@ -49,6 +50,7 @@
     "react-dom": "16.4.2",
     "react-emotion": "9.2.6",
     "react-helmet": "5.2.0",
+    "react-modal": "3.5.1",
     "react-typography": "0.16.13",
     "rehype-react": "3.0.3",
     "typescript": "3.0.1",
