--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
     "@types/react-modal": "3.2.1",
     "emotion": "9.2.9",
     "emotion-server": "9.2.9",
-    "gatsby": "next",
-    "gatsby-image": "next",
-    "gatsby-plugin-emotion": "next",
-    "gatsby-plugin-google-analytics": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-typescript": "next",
-    "gatsby-plugin-typography": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby": "^2.0.0",
+    "gatsby-image": "^2.0.5",
+    "gatsby-plugin-emotion": "^2.0.5",
+    "gatsby-plugin-google-analytics": "^2.0.5",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.5",
+    "gatsby-plugin-typescript": "^2.0.0",
+    "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-source-filesystem": "^2.0.1",
+    "gatsby-transformer-remark": "^2.1.1",
+    "gatsby-transformer-sharp": "^2.1.1",
     "polished": "2.0.3",
     "react": "16.5.1",
     "react-dom": "16.5.1",
