--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "gatsby develop -p 1234",
+    "start": "gatsby develop -p 1234 --open",
     "build": "gatsby build",
     "serve": "gatsby serve"
   },
