--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-image": "2.0.15",
     "gatsby-plugin-emotion": "2.0.5",
     "gatsby-plugin-google-analytics": "2.0.6",
+    "gatsby-plugin-netlify": "^2.0.5",
     "gatsby-plugin-react-helmet": "3.0.0",
     "gatsby-plugin-sharp": "2.0.7",
     "gatsby-plugin-typescript": "2.0.0",
