--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-brands-svg-icons": "5.4.1",
     "@fortawesome/free-solid-svg-icons": "5.4.1",
     "@fortawesome/react-fontawesome": "0.1.3",
+    "@types/react": "^16.7.6",
     "@types/react-helmet": "5.0.7",
     "@types/react-modal": "3.2.1",
     "emotion": "9.2.9",
