--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "@fortawesome/free-brands-svg-icons": "5.4.1",
     "@fortawesome/free-solid-svg-icons": "5.4.1",
     "@fortawesome/react-fontawesome": "0.1.3",
-    "@types/react-helmet": "5.0.7",
-    "@types/react-modal": "3.2.1",
     "emotion": "10.0.1",
     "emotion-server": "10.0.1",
     "gatsby": "2.0.28",
@@ -53,12 +51,15 @@
     "react-modal": "3.5.1",
     "react-typography": "0.16.13",
     "rehype-react": "3.0.3",
-    "typescript": "3.0.3",
     "typography": "0.16.17"
   },
   "devDependencies": {
+    "@types/react-helmet": "5.0.7",
+    "@types/react-modal": "3.2.1",
+    "@types/typography": "^0.16.0",
     "husky": "1.0.0-rc.14",
     "lint-staged": "7.2.2",
-    "prettier": "1.15.1"
+    "prettier": "1.15.1",
+    "typescript": "3.0.3"
   }
 }
