--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "trailingComma": "es5"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.1",
+    "@emotion/styled": "^10.0.1",
     "@fortawesome/fontawesome-svg-core": "1.2.8",
     "@fortawesome/free-brands-svg-icons": "5.5.0",
     "@fortawesome/free-solid-svg-icons": "5.5.0",
     "@fortawesome/react-fontawesome": "0.1.3",
-    "emotion": "10.0.1",
     "emotion-server": "10.0.1",
     "gatsby": "2.0.60",
     "gatsby-image": "2.0.22",
@@ -46,7 +47,6 @@
     "polished": "2.3.1",
     "react": "16.6.3",
     "react-dom": "16.6.3",
-    "react-emotion": "10.0.0",
     "react-helmet": "5.2.0",
     "react-modal": "3.6.1",
     "react-typography": "0.16.13",
