--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "gatsby develop -p 1234",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "clean": "rm -rf node_modules/ .cache/ public/"
   },
   "husky": {
     "hooks": {
