--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "gatsby develop -p 1234",
+    "start": "gatsby develop --open -p 1234",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "rm -rf node_modules/ .cache/ public/"
@@ -27,18 +27,21 @@
     "trailingComma": "es5"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.2",
+    "@emotion/styled": "^10.0.2",
     "@fortawesome/fontawesome-svg-core": "1.2.8",
     "@fortawesome/free-brands-svg-icons": "5.5.0",
     "@fortawesome/free-solid-svg-icons": "5.5.0",
     "@fortawesome/react-fontawesome": "0.1.3",
     "@types/react-helmet": "5.0.7",
     "@types/react-modal": "3.6.0",
-    "emotion": "9.2.12",
-    "emotion-server": "9.2.12",
-    "gatsby": "2.0.60",
+    "emotion": "^10.0.2",
+    "emotion-server": "^10.0.2",
+    "gatsby": "2.0.62",
     "gatsby-image": "2.0.22",
-    "gatsby-plugin-emotion": "2.0.7",
+    "gatsby-plugin-emotion": "3.0.0",
     "gatsby-plugin-google-analytics": "2.0.8",
+    "gatsby-plugin-netlify": "2.0.6",
     "gatsby-plugin-react-helmet": "3.0.4",
     "gatsby-plugin-sharp": "2.0.14",
     "gatsby-plugin-typescript": "2.0.2",
@@ -49,7 +52,6 @@
     "polished": "2.3.1",
     "react": "16.6.3",
     "react-dom": "16.6.3",
-    "react-emotion": "9.2.12",
     "react-helmet": "5.2.0",
     "react-modal": "3.6.1",
     "react-typography": "0.16.13",
