--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-plugin-google-analytics": "2.0.8",
     "gatsby-plugin-netlify": "2.0.6",
     "gatsby-plugin-react-helmet": "3.0.4",
+    "gatsby-plugin-remove-trailing-slashes": "^2.0.6",
     "gatsby-plugin-sharp": "2.0.14",
     "gatsby-plugin-typescript": "2.0.2",
     "gatsby-plugin-typography": "2.2.2",
