--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/free-brands-svg-icons": "5.5.0",
     "@fortawesome/free-solid-svg-icons": "5.5.0",
     "@fortawesome/react-fontawesome": "0.1.3",
+    "@types/react": "^16.7.6",
     "@types/react-helmet": "5.0.7",
     "@types/react-modal": "3.6.0",
     "emotion": "10.0.5",
