--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gatsby-image": "2.0.22",
     "gatsby-plugin-emotion": "3.0.0",
     "gatsby-plugin-google-analytics": "2.0.8",
+    "gatsby-plugin-manifest": "^2.0.12",
     "gatsby-plugin-netlify": "2.0.6",
     "gatsby-plugin-react-helmet": "3.0.4",
     "gatsby-plugin-remove-trailing-slashes": "2.0.6",
