--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "gatsby develop --open -p 1234",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "rm -rf node_modules/ .cache/ public/"
+    "clean": "rm -rf node_modules/ .cache/ public/",
+    "typegen": "graphql-codegen --config codegen.yml"
   },
   "husky": {
     "hooks": {
@@ -33,6 +34,7 @@
     "@fortawesome/free-brands-svg-icons": "5.8.1",
     "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
+    "@graphql-codegen/cli": "^1.0.3",
     "@types/react": "16.8.8",
     "@types/react-helmet": "5.0.8",
     "@types/react-modal": "3.8.1",
@@ -63,6 +65,8 @@
     "typography": "0.16.19"
   },
   "devDependencies": {
+    "@graphql-codegen/typescript": "1.0.3",
+    "@graphql-codegen/typescript-operations": "1.0.3",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "prettier": "1.16.4"
