--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": false,
+    "rootDir": "./src",
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
@@ -8,6 +8,6 @@
     "target": "esnext",
     "jsx": "react",
     "lib": ["dom", "es2015", "es2017"]
-  },
-  "include": ["./src/**/*"]
+    // "strict": true
+  }
 }
