--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "16.8.8",
     "@types/react-helmet": "5.0.8",
     "@types/react-modal": "3.8.1",
+    "dotenv": "7.0.0",
     "emotion": "10.0.9",
     "emotion-server": "10.0.9",
     "gatsby": "2.2.9",
@@ -52,6 +53,7 @@
     "gatsby-plugin-typescript": "2.0.11",
     "gatsby-plugin-typography": "2.2.10",
     "gatsby-source-filesystem": "2.0.28",
+    "gatsby-source-graphql": "2.0.15",
     "gatsby-transformer-remark": "2.3.8",
     "gatsby-transformer-sharp": "2.1.17",
     "polished": "3.1.0",
