--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@graphql-codegen/cli": "1.0.3",
+    "@mosch/gatsby-source-github": "0.4.1",
     "@types/react": "16.8.8",
     "@types/react-helmet": "5.0.8",
     "@types/react-modal": "3.8.1",
@@ -53,7 +54,6 @@
     "gatsby-plugin-typescript": "2.0.11",
     "gatsby-plugin-typography": "2.2.10",
     "gatsby-source-filesystem": "2.0.28",
-    "gatsby-source-graphql": "2.0.15",
     "gatsby-transformer-remark": "2.3.8",
     "gatsby-transformer-sharp": "2.1.17",
     "polished": "3.1.0",
