--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "gatsby-plugin-sharp": "2.0.30",
     "gatsby-plugin-typescript": "2.0.11",
     "gatsby-plugin-typography": "2.2.10",
+    "gatsby-remark-katex": "3.0.4",
     "gatsby-remark-prismjs": "3.2.6",
     "gatsby-source-filesystem": "2.0.28",
     "gatsby-transformer-remark": "2.3.8",
     "gatsby-transformer-sharp": "2.1.17",
+    "katex": "0.10.1",
     "polished": "3.1.0",
     "prismjs": "1.16.0",
     "react": "16.8.5",
