--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gatsby-plugin-google-analytics": "2.0.17",
     "gatsby-plugin-manifest": "2.0.24",
     "gatsby-plugin-netlify": "2.0.13",
+    "gatsby-plugin-netlify-cache": "1.1.0",
     "gatsby-plugin-react-helmet": "3.0.10",
     "gatsby-plugin-remove-trailing-slashes": "2.0.10",
     "gatsby-plugin-sharp": "2.0.30",
