--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gatsby-plugin-typography": "2.2.10",
     "gatsby-remark-katex": "3.0.4",
     "gatsby-remark-prismjs": "3.2.6",
+    "gatsby-remark-smartypants": "2.0.9",
     "gatsby-source-filesystem": "2.0.28",
     "gatsby-transformer-remark": "2.3.8",
     "gatsby-transformer-sharp": "2.1.17",
