--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gatsby-plugin-netlify": "2.0.13",
     "gatsby-plugin-netlify-cache": "1.1.0",
     "gatsby-plugin-react-helmet": "3.0.10",
+    "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
     "gatsby-plugin-remove-trailing-slashes": "2.0.10",
     "gatsby-plugin-sharp": "2.0.30",
     "gatsby-plugin-typescript": "2.0.11",
