--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@graphql-codegen/cli": "1.0.3",
+    "@mosch/gatsby-source-github": "0.4.1",
     "@types/react": "16.8.8",
     "@types/react-helmet": "5.0.8",
     "@types/react-modal": "3.8.1",
+    "dotenv": "7.0.0",
     "emotion": "10.0.9",
     "emotion-server": "10.0.9",
     "gatsby": "2.2.9",
@@ -52,10 +54,15 @@
     "gatsby-plugin-sharp": "2.0.30",
     "gatsby-plugin-typescript": "2.0.11",
     "gatsby-plugin-typography": "2.2.10",
+    "gatsby-remark-katex": "3.0.4",
+    "gatsby-remark-prismjs": "3.2.6",
+    "gatsby-remark-smartypants": "2.0.9",
     "gatsby-source-filesystem": "2.0.28",
     "gatsby-transformer-remark": "2.3.8",
     "gatsby-transformer-sharp": "2.1.17",
+    "katex": "0.10.1",
     "polished": "3.1.0",
+    "prismjs": "1.16.0",
     "react": "16.8.5",
     "react-dom": "16.8.5",
     "react-helmet": "5.2.0",
