--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "16.8.20",
     "@types/react-helmet": "5.0.8",
     "@types/react-modal": "3.8.2",
+    "d3": "5.12.0",
     "dotenv": "8.0.0",
     "emotion": "10.0.9",
     "emotion-server": "10.0.9",
@@ -53,7 +54,7 @@
     "gatsby-plugin-remove-trailing-slashes": "2.0.11",
     "gatsby-plugin-sharp": "2.1.5",
     "gatsby-plugin-typescript": "2.0.15",
-    "gatsby-plugin-typography": "2.2.13",
+    "gatsby-plugin-typography": "2.3.14",
     "gatsby-remark-katex": "3.0.4",
     "gatsby-remark-prismjs": "3.2.11",
     "gatsby-remark-smartypants": "2.0.9",
@@ -75,6 +76,7 @@
   "devDependencies": {
     "@graphql-codegen/typescript": "1.2.1",
     "@graphql-codegen/typescript-operations": "1.2.1",
+    "@types/d3": "5.7.2",
     "husky": "3.0.8",
     "lint-staged": "9.2.0",
     "prettier": "1.18.2"
