--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/react-fontawesome": "0.1.4",
     "@graphql-codegen/cli": "1.2.1",
     "@mosch/gatsby-source-github": "0.4.1",
+    "@rehooks/component-size": "1.0.3",
     "@types/react": "16.8.20",
     "@types/react-helmet": "5.0.8",
     "@types/react-modal": "3.8.2",
