--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gatsby-plugin-sharp": "2.1.5",
     "gatsby-plugin-typescript": "2.0.15",
     "gatsby-plugin-typography": "2.2.13",
+    "gatsby-remark-images": "3.1.29",
     "gatsby-remark-katex": "3.0.4",
     "gatsby-remark-prismjs": "3.2.11",
     "gatsby-remark-smartypants": "2.0.9",
