--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gatsby-plugin-netlify": "2.0.17",
     "gatsby-plugin-netlify-cache": "1.2.0",
     "gatsby-plugin-react-helmet": "3.0.12",
+    "gatsby-plugin-react-helmet-canonical-urls": "1.3.0",
     "gatsby-plugin-remove-trailing-slashes": "2.0.11",
     "gatsby-plugin-sharp": "2.1.5",
     "gatsby-plugin-typescript": "2.0.15",
