--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "8.2.0",
     "emotion": "10.0.23",
     "emotion-server": "10.0.17",
+    "emotion-theming": "10.0.19",
     "gatsby": "2.18.15",
     "gatsby-image": "2.2.37",
     "gatsby-plugin-emotion": "4.1.18",
