--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gatsby-plugin-manifest": "2.2.33",
     "gatsby-plugin-netlify": "2.1.30",
     "gatsby-plugin-netlify-cache": "1.2.0",
+    "gatsby-plugin-postcss": "2.1.18",
     "gatsby-plugin-react-helmet": "3.1.18",
     "gatsby-plugin-react-helmet-canonical-urls": "1.4.0",
     "gatsby-plugin-remove-trailing-slashes": "2.1.17",
@@ -64,6 +65,7 @@
     "gatsby-transformer-sharp": "2.3.9",
     "katex": "0.11.1",
     "polished": "3.4.2",
+    "postcss-nesting": "7.0.1",
     "prismjs": "1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -71,6 +73,7 @@
     "react-modal": "3.11.1",
     "react-typography": "0.16.19",
     "rehype-react": "4.0.1",
+    "tailwindcss": "1.1.4",
     "typescript": "3.7.3",
     "typography": "0.16.19"
   },
