--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gatsby-plugin-react-helmet": "3.1.18",
     "gatsby-plugin-react-helmet-canonical-urls": "1.4.0",
     "gatsby-plugin-remove-trailing-slashes": "2.1.17",
+    "gatsby-plugin-sass": "2.1.26",
     "gatsby-plugin-sharp": "2.3.9",
     "gatsby-plugin-typescript": "2.1.23",
     "gatsby-plugin-typography": "2.3.20",
@@ -64,6 +65,7 @@
     "gatsby-transformer-remark": "2.6.44",
     "gatsby-transformer-sharp": "2.3.9",
     "katex": "0.11.1",
+    "node-sass": "4.13.0",
     "polished": "3.4.2",
     "postcss-nesting": "7.0.1",
     "prismjs": "1.17.1",
