--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,md,json,js}": [
+    "*.{ts,tsx,md,json,js,css}": [
       "prettier --write",
       "git add"
     ]
@@ -28,8 +28,6 @@
     "trailingComma": "es5"
   },
   "dependencies": {
-    "@emotion/core": "10.0.22",
-    "@emotion/styled": "10.0.23",
     "@fortawesome/fontawesome-svg-core": "1.2.26",
     "@fortawesome/free-brands-svg-icons": "5.12.0",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
@@ -40,19 +38,17 @@
     "@types/react-helmet": "5.0.14",
     "@types/react-modal": "3.10.1",
     "dotenv": "8.2.0",
-    "emotion": "10.0.23",
-    "emotion-server": "10.0.17",
-    "emotion-theming": "10.0.19",
     "gatsby": "2.18.15",
     "gatsby-image": "2.2.37",
-    "gatsby-plugin-emotion": "4.1.18",
     "gatsby-plugin-google-analytics": "2.1.31",
     "gatsby-plugin-manifest": "2.2.33",
     "gatsby-plugin-netlify": "2.1.30",
     "gatsby-plugin-netlify-cache": "1.2.0",
+    "gatsby-plugin-postcss": "2.1.18",
     "gatsby-plugin-react-helmet": "3.1.18",
     "gatsby-plugin-react-helmet-canonical-urls": "1.4.0",
     "gatsby-plugin-remove-trailing-slashes": "2.1.17",
+    "gatsby-plugin-sass": "2.1.26",
     "gatsby-plugin-sharp": "2.3.9",
     "gatsby-plugin-typescript": "2.1.23",
     "gatsby-plugin-typography": "2.3.20",
@@ -63,7 +59,9 @@
     "gatsby-transformer-remark": "2.6.44",
     "gatsby-transformer-sharp": "2.3.9",
     "katex": "0.11.1",
+    "node-sass": "4.13.0",
     "polished": "3.4.2",
+    "postcss-nesting": "7.0.1",
     "prismjs": "1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -71,6 +69,7 @@
     "react-modal": "3.11.1",
     "react-typography": "0.16.19",
     "rehype-react": "4.0.1",
+    "tailwindcss": "1.1.4",
     "typescript": "3.7.3",
     "typography": "0.16.19"
   },
