--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@fortawesome/free-brands-svg-icons": "5.12.0",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
     "@fortawesome/react-fontawesome": "0.1.8",
+    "@fullhuman/postcss-purgecss": "1.3.0",
     "@graphql-codegen/cli": "1.9.1",
     "@mosch/gatsby-source-github": "0.4.1",
     "@types/react": "16.9.16",
     "@types/react-helmet": "5.0.14",
     "@types/react-modal": "3.10.1",
+    "autoprefixer": "9.7.3",
     "dotenv": "8.2.0",
     "gatsby": "2.18.15",
     "gatsby-image": "2.2.37",
@@ -60,7 +62,7 @@
     "gatsby-transformer-sharp": "2.3.9",
     "katex": "0.11.1",
     "node-sass": "4.13.0",
-    "postcss-nesting": "7.0.1",
+    "postcss-nested": "4.2.1",
     "prismjs": "1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
