--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "8.2.0",
     "gatsby": "2.18.17",
     "gatsby-image": "2.2.37",
+    "gatsby-plugin-feed": "2.3.25",
     "gatsby-plugin-google-analytics": "2.1.31",
     "gatsby-plugin-manifest": "2.2.34",
     "gatsby-plugin-netlify": "2.1.30",
