--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gatsby-plugin-sharp": "2.3.10",
     "gatsby-plugin-typescript": "2.1.23",
     "gatsby-plugin-typography": "2.3.20",
+    "gatsby-remark-autolink-headers": "2.1.23",
     "gatsby-remark-katex": "3.1.20",
     "gatsby-remark-prismjs": "3.3.28",
     "gatsby-remark-smartypants": "2.1.19",
