--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gatsby-plugin-typescript": "2.1.23",
     "gatsby-plugin-typography": "2.3.20",
     "gatsby-remark-autolink-headers": "2.1.23",
+    "gatsby-remark-images": "3.1.43",
     "gatsby-remark-katex": "3.1.20",
     "gatsby-remark-prismjs": "3.3.28",
     "gatsby-remark-smartypants": "2.1.19",
