--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "8.2.0",
     "gatsby": "2.18.17",
     "gatsby-image": "2.2.37",
+    "gatsby-plugin-feed": "2.3.25",
     "gatsby-plugin-google-analytics": "2.1.31",
     "gatsby-plugin-manifest": "2.2.34",
     "gatsby-plugin-netlify": "2.1.30",
@@ -54,6 +55,8 @@
     "gatsby-plugin-sharp": "2.3.10",
     "gatsby-plugin-typescript": "2.1.23",
     "gatsby-plugin-typography": "2.3.20",
+    "gatsby-remark-autolink-headers": "2.1.23",
+    "gatsby-remark-images": "3.1.44",
     "gatsby-remark-katex": "3.1.20",
     "gatsby-remark-prismjs": "3.3.28",
     "gatsby-remark-smartypants": "2.1.19",
