--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,11 @@
-baseURL = "http://example.org/"
+baseURL = "https://nathansmith.io/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "nathansmith.io"
+# theme = 'hugo-bearblog'
 
+# [permalinks]
+#   blog = "/:slug/"
+#   tags = "/blog/:slug"
 
-theme = 'hugo-bearblog'
+[params]
+hideMadeWithLine = true
