--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Nathan Smith <nathan@nathansmith.io>",
   "license": "MIT",
   "dependencies": {
+    "@tailwindcss/typography": "0.3.1",
     "autoprefixer": "10.1.0",
     "postcss": "8.2.1",
     "postcss-cli": "8.3.1",
