--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "nathansmith.io",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "2.0.0",
   "repository": "https://github.com/nathunsmitty/nathansmith.io.git",
   "author": "Nathan Smith <nathan@nathansmith.io>",
-  "license": "MIT",
+  "license": "UNLICENSED",
+  "private": true,
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
   "dependencies": {
+    "@tailwindcss/typography": "0.3.1",
     "autoprefixer": "10.1.0",
     "postcss": "8.2.1",
     "postcss-cli": "8.3.1",
