--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "postcss-cli": "8.3.1",
     "postcss-nested": "5.0.3",
     "tailwindcss": "2.0.2"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   }
 }
