--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -37,8 +37,8 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Install Dart Sass
-        run: sudo snap install dart-sass
+      - name: Setup node
+        uses: actions/setup-node@v4
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -48,7 +48,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5
       - name: Install Node.js dependencies
-        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+        run: "npm ci"
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
